[package]
name = "vehicle_nn_core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance vehicle nanomsg message processor"
license = "MIT"

[lib]
name = "vehicle_nn_core"
crate-type = ["lib", "cdylib"]  # lib用于测试，cdylib用于Python集成

[dependencies]
# 序列化和JSON处理
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步运行时
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 高性能数据结构
dashmap = "5.5"
crossbeam = "0.8"
parking_lot = "0.12"

# 内存优化
bytes = "1.5"
smallvec = "1.11"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 随机数生成（用于测试）
rand = "0.8"

[dev-dependencies]
# 测试相关
tokio-test = "0.4"
criterion = "0.5"

# 基准测试
[[bench]]
name = "message_processing"
harness = false

[profile.release]
# 优化配置
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"